--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ homepage = "https://github.com/ristekoss/rust-sso-ui-jwt"
 repository = "https://github.com/ristekoss/rust-sso-ui-jwt"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = ["example"]
 
 [dependencies]
 jsonwebtoken = "8.1.1"
