--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ members = ["example"]
 
 [dependencies]
 jsonwebtoken = "8.1.1"
-scraper = "0.13.0"
 serde_json = "1.0.82"
+strong-xml = "0.6.3"
 
 [features]
 log = ["dep:env_logger", "dep:log"]
@@ -29,10 +29,6 @@ optional = true
 [dependencies.log]
 version = "0.4.17"
 optional = true
-
-[dependencies.quick-xml]
-version = "0.23.0"
-features = ["serialize"]
 
 [dependencies.reqwest]
 version = "0.11.11"
