--- a/examples/actix-web/Cargo.toml
+++ b/examples/actix-web/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
-name = "example"
+name = "actix-web-example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+actix-web = "4.1.0"
+
+[dependencies.serde]
+version = "1.0.140"
+features = ["derive"]
+
 [dependencies.sso-ui-jwt]
-path = "../"
+path = "../../"
 features = ["log"]
