--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/ristekoss/rust-sso-ui-jwt"
 documentation = "https://docs.rs/sso-ui-jwt"
 readme = "README.md"
 license = "MIT"
+include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 
 [workspace]
 members = ["examples/*"]
