--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,11 @@ serde_json = "1.0.82"
 strong-xml = "0.6.3"
 
 [features]
-log = ["dep:env_logger", "dep:log"]
+log = ["dep:log"]
 
 [dependencies.chrono]
 version = "0.4.19"
 features = ["serde"]
-
-[dependencies.env_logger]
-version = "0.9.0"
-optional = true
 
 [dependencies.log]
 version = "0.4.17"
