fix: add keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "sso-ui-jwt"
 description = "Rust library for JWT utilities from SSO UI"
 version = "0.1.0"
 edition = "2021"
-keywords = ["sso", "jwt", "universitas-indonesia"]
+keywords = ["sso", "jwt", "ristekoss", "ristekcsui", "universitasindonesia"]
 authors = ["RISTEK Open Source <team@ristek.cs.ui.ac.id>"]
 homepage = "https://github.com/ristekoss/rust-sso-ui-jwt"
 repository = "https://github.com/ristekoss/rust-sso-ui-jwt"
