--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,13 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 [workspace]
 members = ["examples/*"]
 
+[features]
+log = ["dep:log"]
+
 [dependencies]
 jsonwebtoken = "8.1.1"
 serde_json = "1.0.82"
 strong-xml = "0.6.3"
-
-[features]
-log = ["dep:log"]
 
 [dependencies.chrono]
 version = "0.4.19"
@@ -41,7 +41,4 @@ features = ["derive"]
 
 [dependencies.tokio]
 version = "1.20.1"
-features = ["full"]
-
-[dev-dependencies.dotenv]
-version = "0.15.0"
+features = ["rt-multi-thread", "macros"]
