--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = ["examples/*"]
 log = ["dep:log"]
 
 [dependencies]
+http_req = "0.8.1"
 jsonwebtoken = "8.1.1"
 serde_json = "1.0.82"
 strong-xml = "0.6.3"
@@ -31,14 +32,6 @@ features = ["serde"]
 version = "0.4.17"
 optional = true
 
-[dependencies.reqwest]
-version = "0.11.11"
-features = ["json"]
-
 [dependencies.serde]
 version = "1.0.140"
 features = ["derive"]
-
-[dependencies.tokio]
-version = "1.20.1"
-features = ["rt-multi-thread", "macros"]
